@@ -1,3 +1,7 @@
+2000-05-19   Nathan C. Myers  <ncm@cantrip.org>
+
+      	* bits/generic_shadow.h: s/swamp/legacy/
+
 2000-05-19  Phil Edwards  <pme@sourceware.cygnus.com>
 
 	* acinclude.m4:  Clean up comments on newer checks.
